force-app/main/default/objects/OppCustomProjectRequest__c/OppCustomProjectRequest__c.object-meta.xml
<CustomObject>
    <label>Opportunity Custom Project Request</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Custom Project Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>