force-app/main/default/objects/OppCustomProjectRequest__c/fields/BacksplashDetail__c.field-meta.xml
<CustomField>
    <fullName>BacksplashDetail__c</fullName>
    <label>Backsplash Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loose/Standard</fullName>
                <label>Loose/Standard (KRION)</label>
            </value>
            <value>
                <fullName>1/2Standard</fullName>
                <label>½ Standard Continuous Flow (XTONE)</label>
            </value>
            <value>
                <fullName>1/2Random</fullName>
                <label>½ Random Pattern (XTONE)</label>
            </value>
            <value>
                <fullName>3/8 Random</fullName>
                <label>3/8 Random Pattern (XTONE)</label>
            </value>
            <value>
                <fullName>1/4Random</fullName>
                <label>¼ Random Pattern (XTONE)</label>
            </value>
            <value>
                <fullName>3/8  Bookmatched</fullName>
                <label>3/8  Bookmatched (XTONE)</label>
            </value>
            <value>
                <fullName>1/4Bookmatched</fullName>
                <label>¼ Bookmatched (XTONE)</label>
            </value>
            <value>
                <fullName>Coved/Moulded</fullName>
                <label>Coved/Moulded (KRION)</label>
            </value>
            <value>
                <fullName>Other option 1</fullName>
                <isActive>false</isActive>
                <label>Other option 1</label>
            </value>
            <value>
                <fullName>Other option 2</fullName>
                <isActive>false</isActive>
                <label>Other option 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>