force-app/main/default/objects/OppCustomProjectRequest__c/fields/BacksplashHeight__c.field-meta.xml
<CustomField>
    <fullName>BacksplashHeight__c</fullName>
    <label>Backsplash Height</label>
    <length>20</length>
    <type>Text</type>
</CustomField>