force-app/main/default/objects/OppCustomProjectRequest__c/fields/ColorName__c.field-meta.xml
<CustomField>
    <fullName>ColorName__c</fullName>
    <label>Color Name/No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>