force-app/main/default/objects/OppCustomProjectRequest__c/fields/Edge__c.field-meta.xml
<CustomField>
    <fullName>Edge__c</fullName>
    <label>Edge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XTONE Square Mitered Edge</fullName>
            </value>
            <value>
                <fullName>XTONE Eased (Only for ½ in)</fullName>
            </value>
            <value>
                <fullName>KRION Eased Edge</fullName>
            </value>
            <value>
                <fullName>KRION ¼ Beveled</fullName>
            </value>
            <value>
                <fullName>KRION Demi-Bullnosed</fullName>
            </value>
            <value>
                <fullName>Other (Explain in Notes)</fullName>
            </value>
            <value>
                <fullName>ALTISSIMA ¼ Bevel</fullName>
            </value>
            <value>
                <fullName>ALTISSIMA Demi-Bullnose</fullName>
            </value>
            <value>
                <fullName>ALTISSIMA Eased Edge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>