force-app/main/default/objects/OppCustomProjectRequest__c/fields/EdgeThickness__c.field-meta.xml
<CustomField>
    <fullName>EdgeThickness__c</fullName>
    <label>Edge Thickness</label>
    <length>20</length>
    <type>Text</type>
</CustomField>