force-app/main/default/objects/OppCustomProjectRequest__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALTISSIMA Honed</fullName>
            </value>
            <value>
                <fullName>ALTISSIMA Polished</fullName>
            </value>
            <value>
                <fullName>KRION Matte</fullName>
            </value>
            <value>
                <fullName>KRION Satin</fullName>
            </value>
            <value>
                <fullName>XTONE Nature</fullName>
            </value>
            <value>
                <fullName>XTONE Polished</fullName>
            </value>
            <value>
                <fullName>XTONE Silk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>