force-app/main/default/objects/OppCustomProjectRequest__c/fields/OppCustomProject__c.field-meta.xml
<CustomField>
    <fullName>OppCustomProject__c</fullName>
    <label>Custom Project</label>
    <referenceTo>OppCustomProject__c</referenceTo>
    <relationshipName>CustomProjectRequests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>