force-app/main/default/objects/OppCustomProjectRequest__c/fields/ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductDescription__c</fullName>
    <label>Product Description</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kitchen_Countertop</fullName>
                <label>Kitchen Countertop</label>
            </value>
            <value>
                <fullName>Kitchen_Island</fullName>
                <label>Kitchen Island</label>
            </value>
            <value>
                <fullName>Vanity_Top</fullName>
                <label>Vanity Top</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (Explain in Notes)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>