force-app/main/default/objects/OppCustomProjectRequest__c/fields/Underlayment__c.field-meta.xml
<CustomField>
    <fullName>Underlayment__c</fullName>
    <label>Underlayment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard to match KRION/XTONE</fullName>
            </value>
            <value>
                <fullName>Plywood/MDF with Melamine</fullName>
            </value>
            <value>
                <fullName>Canada - Plywood MDF/Painted</fullName>
            </value>
            <value>
                <fullName>Outdoor Use - Marine Grade Plywood</fullName>
            </value>
            <value>
                <fullName>Plywood/MDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>